<resources>
    <string name="app_name">pract7</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="next_activity">Next Activity</string>
    <string name="set_date">Установить Дату</string>
    <string name="enter_name">Введите имя...</string>
    <string name="submit">Submit</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
</resources>